--- a/style.css
+++ b/style.css
@@ -1,441 +1,343 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
-html, body{
-    height: 100%;
-    width: 100%;
-    scroll-behavior: smooth;
-    background-color: rgb(234, 234, 234);
+html,
+body {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-    /* InAnimation */
-    animation: inAnimation 1s linear ;
+  scroll-behavior: smooth;
 }
 
 /* Navbar */
-#navLogo{
-    font-family: "Montserrat";
-    font-size: large;
+.nav {
+  padding: 100px 100px 0px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 400px;
 }
-#a2{
-    background-color: royalblue;
-    border-radius: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    
-    transition: 0.2s linear 0s;
+#logo{
+  height: 70px;
 }
-#a3{
-    background-color: rgb(0, 0, 0);
-    border-radius: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-    transition: 0.2s linear 0s;
+#navLogo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: larger;
+  display: flex;
+  color: rgb(255, 204, 0);
 }
-#a1{
-    background-color: white;
-    border-radius: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-    transition: 0.2s linear 0s;
+#navButton {
+  display: none;
 }
-a{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: Montserrat;
+a {
+  text-decoration: none;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: larger;
 }
-#navIcons{
-    display: flex;
-    gap: 100px;
-}
-.nav{
-    display: flex;
-    align-items: end;
-    justify-content: space-around;
-    padding-top: 100px;
+#navIcons {
+  display: flex;
+  gap: 100px;
 }
 
-/* About */
-#aboutImg{
-    height: 200px;
-    border-radius: 100%;
-}
-#aboutImage{
-    display: flex;
-    justify-content: center;
-    margin-top: 180px;
-}
-#aboutText{
-    margin-top: 80px;
-    font-family: Montserrat;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    padding: 50px;
+/* Homepage */
+.home {
+  padding: 250px 200px 0px 200px;
+  text-align: center;
 
-    animation: flow 2s linear;
-    animation-iteration-count: infinite;
+  font-size: 25px;
 }
-.about{
-    padding-top: 30px;
-    padding-left: 200px;
-    padding-right:200px;
+#homeButton {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
 }
-#end1{
-    margin-top: 150px;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 150px;
+#homeVideo {
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-between;
+  gap: 200px;
+  align-items: center;
 }
-#aboutSkills{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 300px;
-    font-family: Montserrat;
-    font-size: 80px;
-}
-#aboutSkillsImg{
-    height: 500px;
-    border-radius: 20px;
-    border-color: black;
-
-    transition: 0.2s linear 0s ;
+#homeVideoText {
+  font-size: 100px;
+  font-family: "Montserrat", sans-serif;
+  text-align: left;
 }
 
-/* Social */
-.social{
-    padding-top: 200px;
-    padding-left: 200px;
-    padding-right: 200px;
-
-    background-color: black;
-    color: white;
-    font-family: Montserrat;
-    font-size: 80px;
-
-    transition: 0.5s linear 0s;
+/* Seperater */
+.seperater {
+  opacity: 50%;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  padding: 0px 100px 0px 100px;
+  background-color: rgb(255, 204, 0);
+  height: 1px;
+  width: 100%;
 }
-#socialH1{
-    display: flex;
-    justify-content: center;
+/* Footer */
+/* Footer1 */
+.footer {
+  margin-top: 200px;
+  padding: 0px 100px 0px 100px;
+  display: flex;
+  justify-content: center;
+  gap: 200px;
 }
-#socialIcons{
-    margin-top: 150px;
-    margin-bottom: 150px;
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
+#f1,
+#f2,
+#f3 {
+  text-decoration: none;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: small;
 }
-#imgIcons{
-    height: 70px;
-}
-#i1, #i2, #i3, #i4, #i5{
-    transition: 0.2s linear 0s;
-}
-
-#end2{
-    color: white;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 100px;
-}
-
-/* Projects */
-.projects{
-    padding-top: 200px;
-    padding-bottom: 100px;
-    padding-left: 200px;
-    padding-right: 200px;
-    background-color: royalblue;
-    color: white;
-    font-family: Montserrat;
-    font-size: 80px;
-
-    transition: 0.5s linear 0s;
-}
-#projectsButtonB{
-    height: 60px;
-    width: 130px;
-    border: none;
-    background-color: white;
-    color: royalblue;
-    border-radius: 10px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: large;
-    font-weight: bolder;
-}
-#projectsH1{
-    display: flex;
-    justify-content: center;
-}
-#projectsButton{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-}
-#end3{
-    display: flex;
-    justify-content: center;
-    color: white;
-    padding-top: 100px;
+/* Footer2 */
+.contact {
+  margin-top: 100px;
+  margin-bottom: 150px;
+  padding: 50px 30px 50px 30px;
+  background-color: rgb(255, 204, 0);
+  display: flex;
+  justify-content: center;
+  font-size: xx-small;
 }
 
-/* Endbar */
-#endbar1{
-    height: 100px;
-    background-color: rgb(255, 111, 0);
+/* Button */
+.btn-62,
+.btn-62 *,
+.btn-62 :after,
+.btn-62 :before,
+.btn-62:after,
+.btn-62:before {
+  border: 0 solid;
+  box-sizing: border-box;
 }
-#endbar2{
-    height: 100px;
-    background-color: rgb(255, 255, 255);
+.btn-62 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #000;
+  background-image: none;
+  color: rgb(255, 204, 0);
+  cursor: pointer;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
 }
-#endbar3{
-    height: 100px;
-    background-color: rgb(0, 117, 43);
+.btn-62:disabled {
+  cursor: default;
+}
+.btn-62:-moz-focusring {
+  outline: auto;
+}
+.btn-62 svg {
+  display: block;
+  vertical-align: middle;
+}
+.btn-62 [hidden] {
+  display: none;
+}
+.btn-62 {
+  background: none;
+  box-sizing: border-box;
+  color: #000;
+  display: block;
+  font-weight: 900;
+  -webkit-mask-image: none;
+  padding: 1.5rem 4rem;
+  position: relative;
+  text-transform: uppercase;
+}
+.btn-62 span {
+  background: rgb(255, 204, 0);
+  border-radius: 0px;
+  display: grid;
+  inset: 0;
+  place-items: center;
+  pointer-events: none;
+  position: absolute;
+}
+.btn-62:hover span {
+  -webkit-animation: wobble 0.8s;
+  animation: wobble 0.8s;
+}
+@-webkit-keyframes wobble {
+  0% {
+    transform: translateZ(0);
+  }
+  15% {
+    transform: translate3d(-25%, 0, 0) rotate(-5deg);
+  }
+  30% {
+    transform: translate3d(20%, 0, 0) rotate(3deg);
+  }
+  45% {
+    transform: translate3d(-15%, 0, 0) rotate(-3deg);
+  }
+  60% {
+    transform: translate3d(10%, 0, 0) rotate(2deg);
+  }
+  75% {
+    transform: translate3d(-5%, 0, 0) rotate(-1deg);
+  }
+  to {
+    transform: translateZ(0);
+  }
+}
+@keyframes wobble {
+  0% {
+    transform: translateZ(0);
+  }
+  15% {
+    transform: translate3d(-25%, 0, 0) rotate(-5deg);
+  }
+  30% {
+    transform: translate3d(20%, 0, 0) rotate(3deg);
+  }
+  45% {
+    transform: translate3d(-15%, 0, 0) rotate(-3deg);
+  }
+  60% {
+    transform: translate3d(10%, 0, 0) rotate(2deg);
+  }
+  75% {
+    transform: translate3d(-5%, 0, 0) rotate(-1deg);
+  }
+  to {
+    transform: translateZ(0);
+  }
 }
 
 /* Responsive */
-@media (max-width:650px){
-    /* Navbar */
-    .nav{
-        display: block;
-    }
-    #navLogo{
-        display: flex;
-        justify-content: center;
-    }
-    #navIcons{
-        margin-top: 50px;
-        display: flex;
-        justify-content: center;
-        font-size: x-small;
-        gap: 30px;
-    }
+@media (max-width: 600px) {
+  /* Navbar */
+  #navButton {
+    display: block;
+    animation: none;
+  }
+  #navLogo {
+    font-size: small;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav {
+    padding: 70px 35px 80px 35px;
+    display: block;
+  }
+  #navIcons {
+    margin-top: 50px;
+    text-align: center;
+    display: none;
 
-    /* About */
-    #aboutImg{
-        height: 150px;
-        border-radius: 100%;
-    }
-    #aboutImage{
-        display: flex;
-        justify-content: center;
-        margin-top: 100px;
-    }
-    #aboutText{
-        font-size: small;
-        margin-top: 80px;
-        font-family: Montserrat;
-        background-color: rgb(255, 255, 255);
-        border-radius: 10px;
-        padding: 30px;
-    }
-    .about{
-        padding-top: 30px;
-        padding-left: 40px;
-        padding-right:40px;
-    }
-    #end1{
-        margin-top: 100px;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 150px;
-    }
-    #aboutSkills{
-        display: block;
-        margin-top: 100px;
-        font-family: Montserrat;
-        font-size: 40px;
+    animation: 0.3s navIconsAnim 0s linear;
+  }
+  #a1,
+  #a2,
+  #a3,
+  #a4 {
+    margin-top: 40px;
+  }
+  #navButton:focus ~ #navIcons {
+    display: block;
+  }
+  /* HomePage */
+  .home {
+    margin-top: 30px;
+    padding: 30px 35px 0px 35px;
+    text-align: left;
 
-    }
-    #aboutSkillsImg{
-        display: flex;
-        justify-content: center;
-        margin-top: 100px;
-        height: 300px;
-        border-radius: 10px;
-        border-color: black;
+    font-size: 20px;
+  }
+  #homeText{
+    text-align: center;
+  }
+  #homeButton {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+  }
+  #homeVideo {
+    margin-top: 100px;
+    display: block;
+  }
+  #homeVideoText {
+    text-align: center;
+    font-size: 40px;
+    font-family: "Montserrat", sans-serif;
+    margin-bottom: 50px;
+  }
+  #homeVideoVid {
+    display: flex;
+    justify-content: center;
+  }
 
+  /* Seperater */
+  .seperater{
+    height: 1px;
+    width: 100%;
+  }
+/* Footer */
+/* Footer1 */
+.footer {
+  margin-top: 0px;
+  padding: 0px 100px 0px 100px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+#f1,
+#f2,
+#f3 {
+  text-decoration: none;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: small;
+}
+  @keyframes navIconsAnim {
+    from {
+      opacity: 0%;
     }
-
-    /* Social */
-    .social{
-        padding-top: 200px;
-        padding-left: 200px;
-        padding-right: 200px;
-    
-        background-color: black;
-        color: white;
-        font-family: Montserrat;
-        font-size: 80px;
+    to {
+      opacity: 100%;
     }
-    #socialH1{
-        display: flex;
-        justify-content: center;
-    }
-    #socialIcons{
-        margin-top: 150px;
-        margin-bottom: 150px;
-        display: flex;
-        justify-content: center;
-        justify-content: space-around;
-    }
-    #imgIcons{
-        height: 50px;
-    }
-    
-    #end2{
-        color: white;
-        display: flex;
-        justify-content: center;
-        padding-bottom: 100px;
-    }
-
-    /* Projects */
-    .projects{
-        padding-top: 200px;
-        padding-bottom: 100px;
-        padding-left: 100px;
-        padding-right: 100px;
-        background-color: royalblue;
-        color: white;
-        font-family: Montserrat;
-        font-size: 40px;
-    }
-    #projectsButtonB{
-        height: 40px;
-        width: 100px;
-        border: none;
-        background-color: white;
-        color: royalblue;
-        border-radius: 10px;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: large;
-        font-weight: bolder;
-    }
-    #projectsH1{
-        display: flex;
-        justify-content: center;
-    }
-    #projectsButton{
-        margin-top: 50px;
-        display: flex;
-        justify-content: center;
-    }
-    #end3{
-        display: flex;
-        justify-content: center;
-        color: white;
-        padding-top: 100px;
-    }
-
-    /* Social */
-    .social{
-        padding-top: 100px;
-        padding-left: 100px;
-        padding-right: 100px;
-    
-        background-color: black;
-        color: white;
-        font-family: Montserrat;
-        font-size: 40px;
-    }
-    #socialH1{
-        display: flex;
-        justify-content: center;
-    }
-    #socialIcons{
-        margin-top: 150px;
-        margin-bottom: 150px;
-        display: flex;
-        justify-content: center;
-        gap:20px;
-    }
-    #imgIcons{
-        height: 40px;
-    }
-    
-    #end2{
-        color: white;
-        display: flex;
-        justify-content: center;
-        padding-bottom: 100px;
-    } 
+  }
 }
 
-/* Animations */
-
-/* Navbar */
-#a1:hover{
-    transform: translateY(-10px);
-}
-#a2:hover{
-    transform: translateY(-10px);
-}
-#a3:hover{
-    transform: translateY(-10px);
-}
-
-/* About */
-@keyframes flow {
-    0%{
-        transform: translateY(-5px);
-    }
-    50%{
-        transform: translateY(5px);
-    }
-    100%{
-        transform: translateY(-5px);
-    }
-}
-#aboutSkillsImg:hover{
-    transform: translateY(-20px);
+/* Animation and Others */
+@keyframes navButtonAnim {
+  0% {
+    rotate: -15deg;
+  }
+  50% {
+    rotate: 15deg;
+  }
+  100% {
+    rotate: 0deg;
+  }
 }
 
-/* Projects */
-.projects:hover{
-    background-color: rgb(0, 64, 255);
+a::selection {
+  color: rgb(255, 204, 0);
 }
-#projectsButtonB:active{
-    background-color: royalblue;
-    color: white;
+h1::selection {
+  color: rgb(255, 204, 0);
 }
-
-/* Social */
-.social:hover{
-    color: royalblue;
-}
-#i1:hover{
-    transform: translateY(-20px);
-}
-#i2:hover{
-    transform: translateY(-20px);
-}
-#i3:hover{
-    transform: translateY(-20px);
-}
-#i4:hover{
-    transform: translateY(-20px);
-}
-#i5:hover{
-    transform: translateY(-20px);
-}
-
-/* InAnimation */
-@keyframes inAnimation {
-    from{
-        opacity: 0%;
-    }
-    to{
-        opacity: 100%;
-    }
+a:hover {
+  color: rgb(255, 204, 0);
 }
